<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <data>
        <variable name="handlers" type="com.ordy.app.ui.login.register.RegisterHandlers" />
        <variable name="viewModel" type="com.ordy.app.ui.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/divider_horizontal"
        android:showDividers="middle"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginCardHeaderText"
            android:text="@string/title_register"/>

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_person_black_24dp"
            app:errorEnabled="true"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.userNameData}"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email_black_24dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.emailRegisterData}"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
            app:errorEnabled="true"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passwordRegisterData}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Repeat Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_register_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_repeat"
            app:startIconDrawable="@drawable/ic_lock_outline_black_24dp"
            app:errorEnabled="true"
            android:maxLines="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_register_password_repeat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.passwordRepeatData}"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Register Button -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:onClick="@{() -> handlers.onRegisterClick()}"/>

        <!-- Goto Login Button -->
        <Button
            android:id="@+id/button_goto_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> handlers.onGotoLoginClick()}"/>

    </LinearLayout>
</layout>